<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg"
    tools:context=".LoginFragment"
    android:id="@+id/loginLayout">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/e_mail"
        app:boxBackgroundColor="@color/orange"
        android:textColorHint="#3B444B"
        app:boxStrokeColor="#EAEAEE"
        app:boxStrokeWidth="2dp"
        app:startIconDrawable="@drawable/ic_baseline_people_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@color/orange"
        android:textColorHint="#3B444B"
        app:boxStrokeColor="#EAEAEE"
        app:boxStrokeWidth="2dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_open_24"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:textColor="#5B5B5B"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginbutton"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginTop="190dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:backgroundTint="@color/orange"
        android:textColor="#3b444b"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537"
        app:strokeColor="#EAEAEE"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="286dp"
        android:layout_height="66dp"
        android:text="@string/tittle"
        android:textAlignment="center"
        android:textColor="#4E4E4E"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        app:layout_constraintBottom_toTopOf="@+id/txtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.407" />

</androidx.constraintlayout.widget.ConstraintLayout>